Add new project command and enhance extension functionality
- Implemented `createNewProject` command to manage Docker image and container creation.
- Registered new commands and views in `package.json`.
- Added tree data providers for projects and tutorials in the extension.
- Updated webview content for tutorial display.
- Included SVG icon for the extension.
- Documented notes for extension development.

--- a/package.json
+++ b/package.json
@@ -12,12 +12,44 @@
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
+    "menus": {
+			"file/newFile": [
+				{
+					"command": "wearable-vscode-extension.helloWorld"
+				}
+			]
+		},
     "commands": [
       {
         "command": "wearable-vscode-extension.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "wearable-vscode-extension.createNewProject",
+        "title": "Create New Project"
       }
-    ]
+    ],
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "wearable-explorer",
+          "title": "Wearable Explorer",
+          "icon": "media/wearable-icon.svg"
+        }
+      ]
+    },
+    "views": {
+      "wearable-explorer": [
+        {
+          "id": "wearable-explorer-tutorials",
+          "name": "Wearable Robot Tutorials"
+        },
+        {
+          "id": "wearable-explorer-projects",
+          "name": "Wearable Robot Projects"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
