--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "wearable-vscode-extension",
-  "displayName": "wearable_vscode_extension",
-  "description": "",
+  "displayName": "Wearable Robot Evaluation",
+  "description": "VSCode extension for Wearable Robot Evaluation",
   "version": "0.0.1",
+  "publisher": "donghee",
   "engines": {
     "vscode": "^1.99.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/donghee/wearable_vscode_extension.git"
   },
   "categories": [
     "Other"
@@ -33,7 +38,7 @@
       "activitybar": [
         {
           "id": "wearable-explorer",
-          "title": "Wearable Explorer",
+          "title": "Wearable Robot Evaluation",
           "icon": "media/wearable-icon.svg"
         }
       ]
@@ -57,7 +62,8 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "package": "npx vsce package"
   },
   "devDependencies": {
     "@types/vscode": "^1.99.0",
